...
    override func viewDidLoad() {
        super.viewDidLoad()

        loadImage()
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        backwardButton.accessibilityIdentifier = "navBackButton"
    }

    @IBAction private func didTapBackwardButton(_ sender: Any) {
        dismiss(animated: true, completion: nil)
    }

...
